--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "argon2": "^0.40.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto": "^1.0.1",
     "express": "^4.19.2",
     "node-telegram-bot-api": "^0.66.0",
     "passport": "^0.7.0",
